fix(css): resolve some issues with buttons/forms
1. Removed unnecessary styles for forms
2. Simplified text for Homepage/Install buttons
3. Fixed misalignment when "Get Stylus" button is removed
4. Updates styles for action buttons on small screen resolutions

--- a/scss/ui/_base.scss
+++ b/scss/ui/_base.scss
@@ -191,14 +191,17 @@ label[for="remember"] {
     }
 }
 
-@media screen and (max-width: 1180px) {
+@media screen and (max-width: 1250px) {
     .header {
         flex-flow: row wrap;
         > .share { width: 100% }
         > .actions {
             margin: 1rem 0 0;
             flex-flow: row wrap;
-            .btn { margin-bottom: 0.5rem }
+            .btn {
+                margin-bottom: 0.5rem;
+                &:first-child { margin-left: 0 }
+            }
         }
     }
 }
