--- a/scss/ui/_reset.scss
+++ b/scss/ui/_reset.scss
@@ -240,12 +240,6 @@ form,
     }
 
     .sort { margin: 0.5rem 0 1.5rem }
-
-    .section {
-        @media screen and (min-width: 1000px) {
-            flex-direction: column !important;
-        }
-    }
 }
 
 @keyframes highlight-2 {
